add logic for the scoreboard and game classes